[package]
name = "loaded-turbo-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.4"
reqwest = {version = "0.12.23", features = ["json"] }
serde = "1.0.226"
serde_json = "1.0.145"
tokio = {version = "1.47.1", features = ["full"]}
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "limit"] }
headers = "0.4.1"
