[package]
name = "loaded-turbo-api"
version = "0.1.0"
edition = "2024"

[dependencies]
bundles_rs = { git = "https://github.com/loadnetwork/bundles-rs.git", branch = "main"}
dotenvy = "0.15.7"
aws-config = { version= "1.8.3", features = ["behavior-version-latest"] }
aws-sdk-s3= { version = "1.100.0", features = ["rt-tokio"] }
anyhow = "1.0.100"
axum = "0.8.4"
reqwest = {version = "0.12.23", features = ["json"] }
serde = "1.0.226"
serde_json = "1.0.145"
tokio = {version = "1.47.1", features = ["full"]}
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "limit"] }
headers = "0.4.1"
base64 = "0.22.1"
hex = "0.4.3"
bs58 = "0.5.1"
sha3 = "0.10.8"
byteorder = "1.5.0"
